--- a/Burgers-1.html
+++ b/Burgers-1.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Burgers 1">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="https://website2064457.nicepage.io/Burgers-1.html?version=45020a18-3e50-4356-946c-369e1565e1bd" data-home-page-title="Burgers 1" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-92d8"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-92d8"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1">
           <img src="images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
