--- a/Burgers-1.html
+++ b/Burgers-1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​breakfast">
     <meta name="description" content="">
-    <title>Burgers 1</title>
+    <title>Fudos</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Burgers-1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -509,16 +509,5 @@
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7348"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false">Privacy policy</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
   </body>
 </html>
