--- a/Burgers-1.html
+++ b/Burgers-1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​breakfast">
     <meta name="description" content="">
-    <title>Fudos</title>
+    <title>Fudose</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Burgers-1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -78,7 +78,7 @@
                   <h1 class="u-custom-font u-font-ubuntu u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-direction="Left" data-animation-delay="500">
                     <span class="u-text-palette-2-base">
                       <font class="u-text-palette-2-base"><b></b>
-                      </font>Fudos
+                      </font>Fudose
                     </span>
                     <span style="font-size: 5rem;"></span>
                   </h1>
