--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​breakfast">
     <meta name="description" content="">
-    <title>Fudos</title>
+    <title>Fudose</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Burgers-1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -78,7 +78,7 @@
                   <h1 class="u-custom-font u-font-ubuntu u-text u-text-1" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-direction="Left" data-animation-delay="500">
                     <span class="u-text-palette-2-base">
                       <font class="u-text-palette-2-base"><b></b>
-                      </font>Fudos
+                      </font>Fudose
                     </span>
                     <span style="font-size: 5rem;"></span>
                   </h1>
@@ -86,7 +86,7 @@
                   </h1>
                   <p class="u-text u-text-3">Get your food home delivered&nbsp;</p>
                   <p class="u-text u-text-default u-text-4">Available in your city</p>
-                  <a href="https://nicepage.me" class="u-active-grey-90 u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-hover-grey-90 u-palette-2-base u-radius-50 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">Book Now</a>
+                  <a href="https://fudose.com" class="u-active-grey-90 u-border-none u-btn u-btn-round u-button-style u-color-scheme-summer-time u-color-style-multicolor-1 u-hover-grey-90 u-palette-2-base u-radius-50 u-text-active-white u-text-body-alt-color u-text-hover-white u-btn-1">Book Now</a>
                 </div>
               </div>
               <div class="u-align-right u-container-style u-layout-cell u-size-30 u-layout-cell-2">
